<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/inputVennNavn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="74dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/navn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputVennDato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/tlf"
        app:layout_constraintEnd_toEndOf="@+id/inputVennNavn"
        app:layout_constraintTop_toBottomOf="@+id/inputVennNavn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/opprettVenn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/opprett"
        android:background="@drawable/btn_shape_avtaler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputVennDato" />
</androidx.constraintlayout.widget.ConstraintLayout>